--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <a class="nav-link font-20" href="#Home">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-light font-20" href="#">About</a>
+        <a class="nav-link text-light font-20" href="#About">About</a>
       </li>
      
       <li class="nav-item">
@@ -71,15 +71,25 @@
   </div>
 </nav>
   <!--NAV END-->
-  
-  
-  </header>
+  <div class="container">
+    <h1 class="text-light font-20 intro">Mahmudul Hasan <p class="text-center m">Arif</p></h1>
+    
+    <p class="text-center text-light txt font-20">Desiger.Developer</p>
+   
+  </div>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="wave"><path fill="#ffffff" fill-opacity="1" d="M0,160L1440,32L1440,320L0,320Z"></path></svg>  
+</header>
 
   <!---!HEADER SECTION-->
 
   <!--MAIN SECTION-->
-  <main id="">
-
+  <main id="About">
+  <div class="container">
+    <p class="lead  text-center m-5">Lorem ipsum dolor sit amet adipisicing elit do tempor incididunt ut labore et dolore magna aliqua ut enim ad minim veniam.</p>
+    <img src="Assets/profile.jpg" alt="profile" class="img-fluid"/>
+  <h2>A little about me.</h2>
+					<p class="lead">I am <ins class="nm">Mahmudul Hasan Arif.</ins> Impossible considered invitation him men instrument saw celebrated unpleasant. Put rest and must set kind next many near nay. He exquisite continued explained middleton am. Impossible considered invitation him men instrument saw celebrated unpleasant. Put rest and must set kind next many near nay. He exquisite continued explained middleton am. Voice hours young woody.</p>
+  </div>
 
   </main>
 
@@ -90,7 +100,6 @@
 
   </footer>
   <!--!FOOTER SECTION-->
-
 
 </body>
 </html>
