--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
       </div>
     
   <div class="container-fluid ">
-    <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#Home">Home</a>
+    <ul class="navbar-nav ">
+        <li class="nav-item close">
+          <a class="nav-link active " aria-current="page" href="#Home">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#About">About</a>
@@ -84,6 +84,22 @@
      <button class=" btn header-btn "><a href="#" class="text-uppercase font-12 font-rale">Click to Contract</a></button>
     </div>
     <!--BACKGROUND video!-->
+     <div class="intro-animated">
+      <div class="intro-text">
+        <h1 class="hide">
+          <span class="text">Welcome  To</span>
+        </h1>
+        <h1 class="hide">
+          <span class="text">&nbsp;&nbsp; My</span>
+        </h1>
+        <h1 class="hide">
+          <span class="text">portfolio.</span>
+        </h1>
+      </div>
+    </div>
+    <div class="slider"></div>
+  
+  
 </header>
   <!--END HEADER-->
   
