--- a/index.html
+++ b/index.html
@@ -254,7 +254,32 @@
 <!--AOS JS-->
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
  
+<!-- Load Facebook SDK for JavaScript -->
+      <div id="fb-root"></div>
+      <script>
+        window.fbAsyncInit = function() {
+          FB.init({
+            xfbml            : true,
+            version          : 'v9.0'
+          });
+        };
 
+        (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));</script>
+
+      <!-- Your Chat Plugin code -->
+      <div class="fb-customerchat"
+        attribution=install_email
+        page_id="106475367384719"
+  theme_color="#0A7CFF"
+  logged_in_greeting="Hi! Wanna to chat with me?just click and go on..."
+  logged_out_greeting="Hi! Wanna to chat with me?just click and go on...">
+      </div>
  
    <!--CUSTOM JS-->
   <script src="main.js" type="text/javascript" charset="utf-8"></script>
