--- a/index.html
+++ b/index.html
@@ -316,13 +316,12 @@
 
       <!-- Your Chat Plugin code -->
       <div class="fb-customerchat"
-        attribution=install_email
+        attribution="setup_tool"
         page_id="106475367384719"
-  theme_color="#d298def2F"
+  theme_color="#0A7CFF"
   logged_in_greeting="Hi! Wanna to chat with me?just click and go on..."
   logged_out_greeting="Hi! Wanna to chat with me?just click and go on...">
       </div>
- 
    <!--CUSTOM JS-->
   <script src="main.js" type="text/javascript" charset="utf-8"></script>
 
